<resources>
    <string name="app_name">SleepAnalysis</string>
    <string name="start">Start</string>
    <string name="result">Result</string>
    <string name="measure">Measure</string>
    <string name="end">End</string>
    <string name="sleep_time_result">Sleep time : %1$d:%2$02d:%3$02d</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="description">Put your phone beside the pillow\nKeep the screen upside\nPress start button</string>
    <string name="description2">Good Night, Sleep Tight\nPress end button to stop measuring</string>
</resources>
